Fixing focus on IE

--- a/src/sass/partials/_base.scss
+++ b/src/sass/partials/_base.scss
@@ -37,7 +37,7 @@ hr, input[type=search] {
 
 
 :focus {
-    @extend %focus;
+    outline-offset: $selection-focus-offset;
 }
 
 /**
